# Telegram-API-Generator-Bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  scraper.py  web_setup.py
.github/workflows/: docker-build.yml
