[project]
name = "telegram-api-bot"
version = "0.1.0"
description = "Telegram bot to get API ID and API Hash from my.telegram.org"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "python-telegram-bot>=21.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "bot", "scraper", "config"]
